--- a/package.json
+++ b/package.json
@@ -12,27 +12,34 @@
     },
     "devDependencies": {
         "@popperjs/core": "^2.10.2",
-        "axios": "^0.21",
-        "bootstrap": "^5.1.3",
+        "autoprefixer": "^10.4.17",
+        "axios": "^1.6.7",
+        "bootstrap": "^5.3.2",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14",
-        "resolve-url-loader": "^3.1.2",
+        "postcss": "^8.4.35",
+        "resolve-url-loader": "^5.0.0",
         "sass": "^1.32.11",
         "sass-loader": "^11.0.1",
-        "vue": "^2.6.12",
-        "vue-loader": "^15.9.8",
-        "vue-template-compiler": "^2.6.12"
+        "tailwindcss": "^3.4.1",
+        "vue": "^3.4.15",
+        "vue-loader": "^17.4.2",
+        "vue-template-compiler": "^2.6.12",
+        "webpack": "^5.90.1"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-svg-core": "^6.5.1",
         "@fortawesome/free-brands-svg-icons": "^6.1.2",
         "@fortawesome/free-solid-svg-icons": "^6.1.2",
-        "@fortawesome/vue-fontawesome": "^2.0.8",
+        "@fortawesome/vue-fontawesome": "^3.0.6",
         "@growthbunker/vuetimeline": "^0.1.17",
         "animate.css": "^4.1.1",
-        "bootstrap-vue": "^2.22.0",
-        "cosmicjs": "^4.1.14",
+        "cosmicjs": "^5.0.2",
         "font-awesome": "^4.7.0",
-        "vue2-animate": "^2.1.4"
+        "primeicons": "^6.0.1",
+        "primevue": "^3.48.1",
+        "vue-router": "^4.2.5",
+        "vue2-animate": "^2.1.4",
+        "vue3-timeline": "^1.2.3"
     }
 }
